<resources>
    <string name="app_name">GD Ritzy\'s</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">GD Ritzy\'s</string>
    <string name="nav_header_subtitle">Mobile Ordering</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Welcome</string>
    <string name="menu_food">Food Menu</string>
    <string name="menu_ice_cream">Ice Cream</string>
    <string name="menu_cart">Cart</string>
    <string name="menu_rewards">Rewards</string>
    <string name="menu_order">Order</string>
    <string name="menu_deals">Deals</string>
</resources>